internal/xds/translator/testdata/out/xds-ir/ratelimit-custom-domain.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        path: foo/bar
      name: first-route
      route:
        cluster: first-route-dest
        rateLimits:
        - actions:
          - genericKey:
              descriptorKey: RULE_NAME
              descriptorValue: test-namespace/test-policy-1/rule/0
          - genericKey:
              descriptorKey: ROUTE_NAME
              descriptorValue: first-route
          - headerValueMatch:
              descriptorKey: rule-0-match-0
              descriptorValue: rule-0-match-0
              expectMatch: true
              headers:
              - name: x-user-id
                stringMatch:
                  exact: one
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        path: example
      name: second-route
      route:
        cluster: second-route-dest
        rateLimits:
        - actions:
          - genericKey:
              descriptorKey: RULE_NAME
              descriptorValue: test-namespace/test-policy-2/rule/0
          - genericKey:
              descriptorKey: ROUTE_NAME
              descriptorValue: second-route
          - requestHeaders:
              descriptorKey: rule-0-match-0
              headerName: x-user-id
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        path: test
      name: third-route
      route:
        cluster: third-route-dest
        rateLimits:
        - actions:
          - genericKey:
              descriptorKey: RULE_NAME
              descriptorValue: test-namespace/test-policy-3/rule/0
          - genericKey:
              descriptorKey: ROUTE_NAME
              descriptorValue: third-route
          - genericKey:
              descriptorKey: rule-0-match--1
              descriptorValue: rule-0-match--1
        upgradeConfigs:
        - upgradeType: websocket
